# low-latency-hft-matching-engine

./: .gitignore  README.md
mvp/: CMakeLists.txt
mvp/bench/: backtest_main.cpp  bench.cpp  gen_ticks.cpp
mvp/src/: engine.cpp  engine.h  order_book.cpp  order_book.h  pool.h  spsc_ring.h
mvp/src/backtest/: portfolio.cpp  portfolio.h  replay.cpp  replay.h  strategy.cpp  strategy.h
mvp/src/core/: affinity.h  driver.h  software_driver.cpp  software_driver.h
mvp/src/dpdk/: dpdk_driver.cpp  dpdk_driver.h
mvp/src/fix/: gateway.cpp  gateway.h  parser.cpp  parser.h
mvp/src/fpga/: fpga_driver.cpp  fpga_driver.h
mvp/src/iouring/: uring_gateway.cpp  uring_gateway.h
mvp/src/md/: feed.cpp  feed.h
mvp/src/ptp/: ptp_client.cpp  ptp_client.h  ptp_oracle.cpp
mvp/src/time/: rdtsc.h
mvp/strategies/: ma_cross.cpp  ma_cross.h  mm.cpp  mm.h
mvp/test/: test_backtest.cpp  test_book.cpp  test_fix.cpp  test_m6.cpp
